# taskList

./: .gitignore  .venv  README.md  pyproject.toml
src/tasklist/: cli.py  logging_config.py  reports.py  task_manager.py
tests/: test_cli.py  test_task_manager.py
