[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasklist"
version = "0.1.0"
description = "Trello-backed task list CLI tool"
authors = [{name = "Joseph Lane", email = "joseph.lane@outlook.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "appdirs>=1.4.4",
    "colorama>=0.4.4",
    "asciichartpy>=1.5.25",
    "numpy>=1.21.0",
]

[project.scripts]
tasklist = "tasklist.cli:main"

[project.optional-dependencies]
dev = ["ruff", "black"]

# Tell setuptools to find packages in the 'src' directory
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Enable Pyflakes (F) and pycodestyle (E, W) rules by default.
select = ["E", "F", "W"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is used.
fixable = ["A", "B", "C", "D", "E", "F", "W"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88

[tool.black]
line-length = 88
